--- a/ruok-server/src/main/resources/application-test.yaml
+++ b/ruok-server/src/main/resources/application-test.yaml
@@ -43,14 +43,14 @@ spring:
       primary: master
       datasource:
         master:
-          url: jdbc:mysql://101.43.70.16:3306/ruok?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true # MySQL Connector/J 8.X 连接的示例
+          url: jdbc:mysql://mysql.juyogo.cn:3306/ruok?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true # MySQL Connector/J 8.X 连接的示例
           username: root
-          password: 123456
+          password: Mervyn@1160
         slave: # 模拟从库，可根据自己需要修改 # 模拟从库，可根据自己需要修改
           lazy: true # 开启懒加载，保证启动速度
-          url: jdbc:mysql://101.43.70:3306/ruok?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true # MySQL Connector/J 8.X 连接的示例
+          url: jdbc:mysql://mysql.juyogo.cn:3306/ruok?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullCatalogMeansCurrent=true # MySQL Connector/J 8.X 连接的示例
           username: root
-          password: 123456
+          password: Mervyn@1160
 
   # Redis 配置。Redisson 默认的配置足够使用，一般不需要进行调优
   data:
